--- a/dev/static/scss/about.scss
+++ b/dev/static/scss/about.scss
@@ -1,112 +1,110 @@
 /********* ABOUT PAGE ***********/
 
-@mixin center($width){
-	margin: {
-		left: auto;
-		right: auto;
-	}
-	width: $width;
+@mixin center($width) {
+    margin: {
+        left: auto;
+        right: auto;
+    }
+    width: $width;
 }
-
-#about{
-	height: 450px;
-	background: linear-gradient(rgba(255, 255, 252, 0.9), rgba(255, 255, 252, 0.9)),
-		url('../img/bg_pholder.jpg') no-repeat fixed;
-	background-size: cover;
+#about {
+    height: 450px;
+    max-height: 1000px;
+    margin-top: -40px;
+    background: linear-gradient(rgba(255, 255, 252, 0.9), rgba(255, 255, 252, 0.9)), url('../img/bg_pholder.jpg') no-repeat fixed;
+    background-size: cover;
+    clear: both;
 }
-
-#mission{
-	width: 50%;
-	float: left;
-	p{
-		@include center(70%);
-
-		span{
-			font-size: 1em;
-			font-weight: 400;	
-		}
-	}
+#mission {
+    width: 50%;
+    float: left;
+    p {
+        @include center(70%);
+        span {
+            font-size: 1em;
+            font-weight: 400;
+        }
+    }
 }
-
-#history{
-	width: 50%;
-	float: right;
-	p{
-		@include center(70%);
-	}
-	span{
-		@include center(70%);
-		font-size: 1em;
-		font-weight: 400;	
-	}
+#history {
+    width: 50%;
+    float: right;
+    p {
+        @include center(70%);
+    }
+    span {
+        @include center(70%);
+        font-size: 1em;
+        font-weight: 400;
+    }
 }
-
+#history:after {
+    clear: both;
+}
 #muiristasBio {
-	padding-top: 50px;
-	@include center(75%);
+    clear: both;
+    padding-top: 50px;
 }
-
+#muiristasContent {
+    overflow: hidden;
+    width: 75%;
+}
 .muiristaWrapper {
-	float: left;
-	margin-left: 15px;
-	margin-right: 15px;
+    float: left;
+    margin-left: 15px;
+    margin-right: 15px;
 }
-
 .muiristaPhoto {
-	position: relative;
-	display: block;
+    position: relative;
 }
-
 .muiristaPhoto > img {
-	width: 200px;
-	height: auto;
+    width: 200px;
+    height: auto;
 }
-
 .hoverDisplay {
-	position: absolute;
-	background-color: rgba(255, 255, 252, 0.8);
-	display: none;
-	width: 180px;
-	min-height: 280px;
-	max-height: 280px;
-	top: 0;
-	padding: 10px 10px 10px 10px;
-	font-size: 0.8125em;
+    position: absolute;
+    background-color: rgba(255, 255, 252, 0.8);
+    display: none;
+    width: 180px;
+    min-height: 280px;
+    max-height: 280px;
+    top: 0;
+    padding: 10px 10px 10px 10px;
+    font-size: 0.8125em;
 }
-
 .muiristaPhoto:hover > .hoverDisplay {
-	display: block;
-	-webkit-animation: fadeIn 0.5s;
+    display: table-cell;
+    vertical-alignment: middle;
+    -webkit-animation: fadeIn 0.5s;
     animation: fadeIn 0.5s;
 }
-
 .muiristaText {
-	clear: both;
-	text-align: center;
-	margin-top: 3px;
-	margin-bottom: 10px;
-	font-size: 1em;
-	font-weight: 400;
+    clear: both;
+    text-align: center;
+    margin-top: 3px;
+    margin-bottom: 10px;
+    font-size: 1em;
+    font-weight: 400;
 }
-
-#sources{
-	clear: both;
-	height: 392px;
-	background-color: $tan;
-	padding-top: 50px;
-	padding-bottom: 50px;
+#sources {
+    clear: both;
+    background-color: $tan;
+    padding-top: 50px;
+    padding-bottom: 50px;
 }
-
-#centerSources{
-	padding-top: 50px;
-	position: absolute;
-	left: 50%;
-	right: 50%;
-	margin: 0 -550px 0 -550px;
-	img{
-		width: 250px;
-		height: auto;
-		margin-right: 10px;
-		margin-left: 10px;
-	}
+#centerSources {
+	padding-top: 25px;
+    /*position: absolute;
+    left: 50%;
+    right: 50%;
+    margin: 0 -550px 0 -550px;*/
+    text-align: center;
+    img {
+        width: 250px;
+        height: auto;
+        margin-top: 10px;
+        margin-right: 10px;
+        margin-left: 10px;
+    }
+    overflow: hidden;
 }
