--- a/dev/static/scss/base.scss
+++ b/dev/static/scss/base.scss
@@ -4,152 +4,166 @@
 @import "menu";
 @import "gallery";
 @import "stories";
-
 @-webkit-keyframes fadeIn {
-    from { opacity: 0; }
-      to { opacity: 1; }
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
 }
-
 @keyframes fadeIn {
-    from { opacity: 0; }
-      to { opacity: 1; }
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
 }
-
 html, body {
-	font-family: $body-font;
-	font-size: 100%;
-	color: $off-black;
-	font-weight: 300;
-	background-color: $off-white;
-/*	font-size: 14px;*/
-	margin: 0;
-	padding: 0;
+    font-family: $body-font;
+    font-size: 100%;
+    color: $off-black;
+    font-weight: 300;
+    background-color: $off-white;
+    /*	font-size: 14px;*/
+    
+    margin: 0;
+    padding: 0;
 }
-
 header {
-	font-family: $header-link-font;
-	background-color: $off-white;
-	font-size: 15px;
-	position: fixed;
-	height: 150px;
-	width: 100%;
-	top: 0;
-	left: 0;
-	z-index: 9999;
+    font-family: $header-link-font;
+    background-color: $off-white;
+    font-size: 15px;
+    position: fixed;
+    height: 150px;
+    width: 100%;
+    top: 0;
+    left: 0;
+    z-index: 9999;
 }
-
 footer {
-	clear: both;
-	position: relative;
-	height: 70px;
-	bottom: 0;
-	margin-bottom: 0;
-	background-color: $off-black;
-	color: white;
+    clear: both;
+    position: relative;
+    height: 70px;
+    bottom: 0;
+    margin-bottom: 0;
+    background-color: $off-black;
+    color: white;
 }
-
 a {
-	color: inherit;
-	text-decoration: none;
+    color: inherit;
+    text-decoration: none;
 }
-
 h1, h2, p {
-	text-align: center;
+    text-align: center;
 }
-
 h1 {
-	font-family: $header-link-font;
-	font-weight: 400;
-	font-size: 4em;
-	color: $light-blue;
-//	display: inline-block;
-//	border-bottom: 5px solid $dark-blue;
+    font-family: $header-link-font;
+    font-weight: 400;
+    font-size: 4em;
+    color: $light-blue;
+    //	display: inline-block;
+    //	border-bottom: 5px solid $dark-blue;
 }
-
 h2 {
-	font-family: $header-link-font;
-	font-weight: 400;
-	font-size: 1.875em;
-	color: $lilac;
-	margin-bottom: 12px;
-	margin-top: 0;
+    font-family: $header-link-font;
+    font-weight: 400;
+    font-size: 1.875em;
+    color: $lilac;
+    margin-bottom: 12px;
+    margin-top: 0;
 }
-
 p {
-	font-family: $body-font;
-	font-weight: 300;
-	font-size: 0.875em;
-	color: $off-black;
-	margin: 0;
+    font-family: $body-font;
+    font-weight: 300;
+    font-size: 0.875em;
+    color: $off-black;
+    margin: 0;
 }
-
 #logo {
-	float: left;
-	margin-left: 100px;
-	padding-top: 25px;
+    float: left;
+    margin-left: 100px;
+    padding-top: 25px;
 }
-
 #logo > a > img {
-	height: 100px;
+    height: 100px;
 }
-
 #nav {
-	float: right;
-	display: inline-block;
-	margin-right: 100px;
-	margin-top: 65px;
+    float: right;
+    display: inline-block;
+    margin-right: 100px;
+    margin-top: 65px;
 }
-
 .option {
-	float: left;
-	margin-left: 45px;
-	padding-bottom: 15px;
-	border-bottom: 3px solid transparent;
+    float: left;
+    margin-left: 45px;
+    padding-bottom: 15px;
+    border-bottom: 3px solid transparent;
+    /*cursor: pointer;*/
 }
-
-.option:hover {
-	color: $salmon;
+.option > a {
+    transition: color 0.2s ease-in-out;
 }
-
+.option > a:hover, .selected {
+    color: $salmon;
+    /*border-bottom: 3px solid $salmon;*/
+}
 .selected {
-	color: $salmon;
-	border-bottom: 3px solid $salmon;
+    border-bottom: 3px solid $salmon;
 }
-
 #wrapper {
-	padding-top: 150px;
-//	padding-bottom: 10px;
+    padding-top: 150px;
+    //	padding-bottom: 10px;
 }
-
 #content {
-	min-height: 100%;
+    min-height: 100%;
 }
-
 #media {
-	float: left;
-	margin-top: 25px;
-	display: inline;
-	margin-left: 100px;
+    float: left;
+    margin-top: 25px;
+    display: inline;
+    margin-left: 100px;
 }
-
 #media > a > img {
-	width: 20px;
-	margin-right: 15px;
+    width: 20px;
+    margin-right: 15px;
 }
-
 #copyright {
-	float: right;
-	text-align: right;
-	margin-top: 28px;
-	display: inline;
-	font-size: 0.75em;
-	margin-right: 100px;
+    float: right;
+    text-align: right;
+    margin-top: 28px;
+    display: inline;
+    font-size: 0.75em;
+    margin-right: 100px;
 }
-
 .right-side {
-	float: right;
+    float: right;
 }
-
 .left-side {
-	float: left;
+    float: left;
+}
+#mobile {
+    display: none;
+    visibility: hidden;
+    margin-top: 55px;
+    margin-right: 100px;
+    float: right;
+    svg {
+    	transition: fill 0.2s ease-in-out;
+    	cursor: pointer;
+    }
+}
+#mobile > svg:hover {
+	fill: $salmon;
+}
+@media(max-width: 905px) {
+    #mobile {
+        display: inline;
+        visibility: visible;
+    }
+    #nav {
+        display: none;
+        visibility: hidden;
+    }
 }
