--- a/dev/static/scss/menu.scss
+++ b/dev/static/scss/menu.scss
@@ -9,7 +9,7 @@
 
 #menuBlurb{
 	text-align: center;
-	height: 170px;  /* temp */
+	margin-bottom: 50px;
 	@include center(50%);
 }
 
